--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+.icon {
+    border-radius: 100%;
+    height: 30px;
+    width: 30px;
+    //margin-left: auto;
+    transition: 200ms all;
+    margin-right: 2px;
+    margin-top: 4px
+    //display: inline-flex;
+    //text-align: right;
+  }
+
+  .icon img {
+    height: 60%;
+    width: 60%;
+    margin: 20%;
+  }
