--- a/src/app/module/pokemon-list/pokemon-list.component.scss
+++ b/src/app/module/pokemon-list/pokemon-list.component.scss
@@ -2,5 +2,9 @@
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-  }
+    // background-image: 
+    //   repeating-linear-gradient( 120deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6) 1px, transparent 1px, transparent 30px, rgba(255, 255, 255, 0.3) 30px, rgba(255, 255, 255, 0.3) 31px, transparent 31px, transparent 60px),
+    //   repeating-linear-gradient( 60deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6) 1px, transparent 1px, transparent 30px, rgba(255, 255, 255, 0.3) 30px, rgba(255, 255, 255, 0.3) 31px, transparent 31px, transparent 60px), 
+    //   repeating-linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3) 1px, transparent 1px, transparent 30px);
+}
   
