--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@use "./assets/helpers/colors";
+@use './assets/helpers/mixins';
 /* You can add global styles to this file, and also import other style files */
 .icon {
     border-radius: 100%;
@@ -16,3 +18,15 @@
     width: 60%;
     margin: 20%;
   }
+
+  
+body {
+  max-width: 100%;
+  margin: 0%;
+  font-family: "Lato", sans-serif;
+  @include mixins.linear-gradient-right(
+    colors.$bg-default,
+    hsl(246, 13%, 85%),
+    #f229ff
+  );
+}
